--- a/css/main.css
+++ b/css/main.css
@@ -147,71 +147,34 @@ section{
         position: relative;
         left: 50%;
         transform: translateX(-50%);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 0.2fr 1fr 1fr 1fr 1fr;
-        grid-auto-columns: 1fr;
-        grid-auto-rows: 1fr;
-        grid-auto-flow: row;
-        grid-template-areas:
-          "img-content-1"
-          "content-1"
-          "title"
-          "img-content-2"
-          "content-2"
-          "img-content-3"
-          "content-3";
-      }
+        display: flex;
+        flex-direction: column;
+    }
       
     .img-content-1 { 
-        grid-area: img-content-1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;    
+        margin-top: 50px;
+        padding: 0;
     }
-    .img-content-1 img{
-        width: 400px;
+    .content-1 {
+        text-align: center;
+        padding: 20px;
     }
-      
-    .content-1 { 
-        grid-area: content-1; 
+    .img-content-2 {
+        margin-top: 50px; 
+        padding: 0;
     }
-      
-    .title { 
-        grid-area: title; 
+    .content-2 {
+        text-align: center;
+        padding: 20px;
     }
-      
-    .img-content-2 { 
-        grid-area: img-content-2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;  
-    }
-    .img-content-2 img{
-        width: 400px;
-    }
-      
-    .content-2 { 
-        grid-area: content-2; 
-    }
-      
     .img-content-3 { 
-        grid-area: img-content-3;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 10px;  
+        margin-top: 50px;
+        padding: 0;
     }
-    .img-content-3 img{
-        width: 400px;
+    .content-3 {
+        text-align: center;
+        padding: 20px;
     }
-      
-    .content-3 { 
-        grid-area: content-3; 
-    }
-      
 }
 
 /* CONTACT */
