--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,13 @@ header{
     color: #069370;
     height: 60px;
     font-size: 36px;
-    line-height: 60px;
-    padding: 0 20px;
     text-align: center;
     box-sizing: border-box;
     float: left;
-    font: 700;
-    text-decoration: none;
+}
+.logo img{
+    width: 100%;
+    height: 100%;
 }
 nav{
     float: right;
@@ -185,6 +185,9 @@ footer{
     place-items: center;
     padding: 2em; 
     font-size: 1.2rem;
+}
+footer img{
+    width: 60px;
 }
 footer ul{
     list-style: none;
