--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,9 @@
 section{
     background: linear-gradient(0deg, rgba(6,147,112,1) 0%, rgba(255,255,255,0.35898109243697474) 20%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
+align-items: center;
 }
 .container {
     max-width: 1200px;
@@ -31,27 +33,33 @@ section{
       "img-content-2 content-2"
       "content-3 img-content-3";
 } 
-.img-content-1 {
-
-   grid-area: img-content-1;
-   position: relative;
+.img-content-1{
+    grid-area: img-content-1;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-content-1 .img-1{
+    width: 340px;
+    height: 340px;
    padding: 20px;
-   background: rgba(255,255,255,0.1);
+   background: rgb(255, 255, 255);
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
+   border-radius: 10px;
+   box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+   border-top: 1px solid rgba(255,255,255,0.5);
+   border-left: 1px solid rgba(255,255,255,0.5);
+   backdrop-filter: blur(5px);
 }
 .img-content-1 img{
-    width: 340px;
-    height: 340px;
-    padding: 20px;
+    width: 300px;
+    height: 300px;
+
     border-radius: 10px;
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
-    border-top: 1px solid rgba(255,255,255,0.5);
-    border-left: 1px solid rgba(255,255,255,0.5);
-    backdrop-filter: blur(5px);
- 
 }
 .content-1 { 
     grid-area: content-1;
