--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,26 @@ nav ul li a:active, nav ul li a:hover{
     }
 }
 
+/* BOUTTON */
+
+.button {
+    height: 50px;
+    background: #fff;
+    margin: 50px auto;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    border-top: 2px solid rgba(255,255,255,0.5);
+    border-left: 2px solid rgba(255,255,255,0.5);
+    backdrop-filter: blur(5px);
+}
+.button a{
+    text-decoration: none;
+    color: black;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1em;
+}
+
 /* FOOTER */
 
 footer{
