--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,8 @@ footer img{
 footer ul{
     list-style: none;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 1em 0; 
 }
 footer ul li:hover{
