--- a/css/contact.css
+++ b/css/contact.css
@@ -17,13 +17,13 @@ section{
     padding: 50px;
 }
 .img-main img{
+    background: #fff;
     width: 340px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
     border-top: 2px solid rgba(255,255,255,0.5);
     border-left: 2px solid rgba(255,255,255,0.5);
-    backdrop-filter: blur(5px);
 }
 .main-content {
     display: flex;
