--- a/css/entretien.css
+++ b/css/entretien.css
@@ -43,9 +43,10 @@
     text-decoration: none;
     transform: translateZ(20px);
 }
-.card-container .container .card .card-content p {
-    font-family: 'Yeseva One', cursive;
-    font-size: 1.5em;
+.card-container .container .card .card-content i {
+    font-size: 6em;
+    color: #fff;
+    text-shadow: 5px 5px 10px rgba(0,0,0,0.5);
 }
 @media screen and (max-width:1100px){
     .card-container .container .card{
@@ -173,6 +174,7 @@ section{
      align-items: center;
      padding: 20px;
  }
+ 
  .img-content-1 img{
      width: 500px;
      height: 400px;
