--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,25 @@
     height: 600px;
     object-fit: cover;
 }
+.swiper-pagination-bullet{
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    opacity: 1;
+    transition: 0.5s;
+}
+.swiper-pagination-bullet:hover{
+    background: #069370;
+    opacity: 1;
+    transition: 0.5s;
+    width: 20px;
+    height: 20px;
+}
+.swiper-pagination-bullet-active{
+    background: #069370;
+    opacity: 1;
+    transition: 1s;
+}
 
 /* CONTENU */
 
